la vamos nos de novo, IA mais erra do que acerta...

--- a/cisco/switch/Catalyst/3560-cx/panelConfig.yml
+++ b/cisco/switch/Catalyst/3560-cx/panelConfig.yml
@@ -5,11 +5,9 @@ anchorLinks:
 
 datapoint: "last"
 
-cellIdPreamble: "cell-"
 dataRefTransform:
-  namespaced: true
-  queries:
-    Porta1: {tabularKeyColumn: "porta1"}
+  namespaced: false
+  cellIdPreamble: "cell-"
 
 cells:
   porta1:
