la vamos nos de novo, sem ideias, IA retornou a resposta errada...

--- a/cisco/switch/Catalyst/3560-cx/panelConfig.yml
+++ b/cisco/switch/Catalyst/3560-cx/panelConfig.yml
@@ -11,3 +11,7 @@ cells:
       thresholds:
         - {color: "red", level: 0}
         - {color: "green", level: 1}
+    label:
+      valueMap:
+        0: "Down"
+        1: "Up"
