la vamos nos de novo, aaaaa...

--- a/cisco/switch/Catalyst/3560-cx/panelConfig.yml
+++ b/cisco/switch/Catalyst/3560-cx/panelConfig.yml
@@ -1,10 +1,8 @@
 dataRefTransform:
   namespaced: false
 
-cellIdPreamble: "cell-"
-
 cells:
-  porta1:
+  porta:
     datapoint: "last"
     dataRef: "porta1"
     fillColor:
