add cisco asa5506x svg

--- a/cisco/firewall/asa5506x/panelConfig.yml
+++ b/cisco/firewall/asa5506x/panelConfig.yml
@@ -68,65 +68,9 @@ cells:
         - {color: "semi-dark-green", level: 0}
         - {color: "green", level: 1}
         - {color: "red", level: 2}
-  porta9:
+  power:
     datapoint: "last"
-    dataRef: "porta9"
-    fillColor:
-      thresholds:
-        - {color: "semi-dark-green", level: 0}
-        - {color: "green", level: 1}
-        - {color: "red", level: 2}
-  porta10:
-    datapoint: "last"
-    dataRef: "porta10"
-    fillColor:
-      thresholds:
-        - {color: "semi-dark-green", level: 0}
-        - {color: "green", level: 1}
-        - {color: "red", level: 2}
-  porta11:
-    datapoint: "last"
-    dataRef: "porta11"
-    fillColor:
-      thresholds:
-        - {color: "semi-dark-green", level: 0}
-        - {color: "green", level: 1}
-        - {color: "red", level: 2}
-  porta12:
-    datapoint: "last"
-    dataRef: "porta12"
-    fillColor:
-      thresholds:
-        - {color: "semi-dark-green", level: 0}
-        - {color: "green", level: 1}
-        - {color: "red", level: 2}
-  porta13:
-    datapoint: "last"
-    dataRef: "porta13"
-    fillColor:
-      thresholds:
-        - {color: "semi-dark-green", level: 0}
-        - {color: "green", level: 1}
-        - {color: "red", level: 2}
-  porta14:
-    datapoint: "last"
-    dataRef: "porta14"
-    fillColor:
-      thresholds:
-        - {color: "semi-dark-green", level: 0}
-        - {color: "green", level: 1}
-        - {color: "red", level: 2}
-  porta15:
-    datapoint: "last"
-    dataRef: "porta15"
-    fillColor:
-      thresholds:
-        - {color: "semi-dark-green", level: 0}
-        - {color: "green", level: 1}
-        - {color: "red", level: 2}
-  porta16:
-    datapoint: "last"
-    dataRef: "porta16"
+    dataRef: "power"
     fillColor:
       thresholds:
         - {color: "semi-dark-green", level: 0}
