--- a/generic/minipc/panelConfig.yml
+++ b/generic/minipc/panelConfig.yml
@@ -39,7 +39,7 @@ cells:
   power:
     datapoint: "last"
     dataRef: "power"
-    labelColor:
+    fillColor:
       thresholds:
         - {color: "semi-dark-green", level: 0}
         - {color: "green", level: 1}
